syntax = "proto3";
//import "timestamp.proto";


option  java_package = "org.cse535.proto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";


service Paxos {
  rpc prepare(PrepareRequest) returns (PrepareResponse) {}

  rpc accept(AcceptRequest) returns (AcceptResponse) {}

  rpc commit(CommitRequest) returns (CommitResponse) {}
}

service ActivateServers{
  rpc activateServer(ActivateServerRequest) returns (ActivateServerResponse) {}
  rpc deactivateServer(DeactivateServerRequest) returns (DeactivateServerResponse) {}
}


message ActivateServerRequest{
  string serverName = 1;
}

message ActivateServerResponse{
  bool success = 1;
  string serverName = 2;
}

message DeactivateServerRequest{
  string serverName = 1;
}

message DeactivateServerResponse{
  bool success = 1;
  string serverName = 2;
}






message PrepareRequest {
  int32 ballotNumber = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message PrepareResponse {
  int32 ballotNumber = 1;
  bool success = 2;
}

message AcceptRequest {
  int32 proposalID = 1;
  string value = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message AcceptResponse {
  int32 ballotNumber = 1;
  bool success = 2;
  int32 acceptNum = 3;
  int32 acceptVal = 4;
}

message CommitRequest {
  int32 ballotNumber = 1;
  repeated Transaction transactions = 3;

}

message CommitResponse {
  int32 ballotNumber = 1;
  bool success = 2;
  repeated Transaction transactions = 3;
}




service TransactionService {

  rpc addTransaction(Transaction) returns (Transaction) {}

  rpc synchronize(SyncRequest) returns (SyncResponse) {}

  rpc getSyncTransactions(SyncResponse) returns (stream Transaction) {}

  rpc commitBlock(CommitBlockRequest) returns (CommitBlockResponse) {}

}


message SyncRequest {
  int32 syncID = 1;
  string data = 2;

  google.protobuf.Timestamp timestamp = 3;
}


message SyncResponse {
  int32 id = 1;
  repeated Transaction transactions = 2;
  bool success = 3;
}

message SyncJob {
  int32 syncID = 1;
  string data = 2;


}

message Transaction {
  string sender = 1;
  string receiver = 2;
  int32 amount = 3;
  google.protobuf.Timestamp timestamp = 4;

  string transactionHash = 5;
}

message BlockOfTransactions {
  repeated Transaction transactions = 1;
  int32 blockNum = 2;
  google.protobuf.Timestamp blockCommitTime = 3;

  string blockHash = 4;

}

message CommitBlockRequest {

  BlockOfTransactions block = 1;
  string leaderServerName = 2;

}

message CommitBlockResponse {
  bool success = 1;
  string approverName = 2;
  int32 blockNum = 3;
}



message TransactionInputConfig{
  int32 setNumber = 1;
  Transaction transaction = 2;

  repeated string serverNames = 5;
}